--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       line-height: 1.5;
     }
     .message.user {
-      flex-direction: row-reverse;
+      justify-content: flex-end;
     }
     .message.user .message-content {
       background-color: #d9fdd3;
@@ -56,6 +56,9 @@
     }
     .message.user img.avatar {
       margin-left: 10px;
+    }
+    .message.it {
+      justify-content: flex-start;
     }
     .message.it .message-content {
       background-color: #ffffff;
