--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>微信聊天界面</title>
+  <title>IT支持</title>
   <style>
     body {
       font-family: Arial, sans-serif;
