--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <div class="chat-container">
-    <div class="chat-header">微信聊天</div>
+    <div class="chat-header">IT支持</div>
     <div class="chat-messages" id="chatMessages">
       <!-- Messages will be dynamically added here -->
     </div>
