--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IT支持</title>
-  <style>
-    body {
-     ```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IT支持</title>
+  <title>微信聊天界面</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f5f5f5;
+      background-color: #dcdcdc;
     }
     .chat-container {
       display: flex;
       flex-direction: column;
       height: 100vh;
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #f5f5f5;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      overflow: hidden;
     }
     .chat-header {
       background-color: #0078ff;
@@ -82,6 +79,30 @@
       border-radius: 10px;
       margin-top: 10px;
     }
+    .chat-footer {
+      background-color: #f5f5f5;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      border-top: 1px solid #ccc;
+    }
+    .chat-footer input {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 20px;
+      font-size: 16px;
+    }
+    .chat-footer button {
+      margin-left: 10px;
+      padding: 10px 20px;
+      background-color: #0078ff;
+      color: white;
+      border: none;
+      border-radius: 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -89,6 +110,10 @@
     <div class="chat-header">IT支持</div>
     <div class="chat-messages" id="chatMessages">
       <!-- Messages will be dynamically added here -->
+    </div>
+    <div class="chat-footer">
+      <input type="text" placeholder="请输入消息..." disabled>
+      <button disabled>发送</button>
     </div>
   </div>
 
