--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
       margin: 0;
       padding: 0;
       background-color: #dcdcdc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     .chat-container {
       display: flex;
       flex-direction: column;
-      height: 100vh;
-      max-width: 600px;
-      margin: 0 auto;
+      height: 90vh;
+      width: 375px; /* Fixed width like WeChat */
       background-color: #f5f5f5;
       border: 1px solid #ccc;
       border-radius: 10px;
@@ -26,8 +29,68 @@
       background-color: #0078ff;
       color: white;
       padding: 10px;
-      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       font-size: 18px;
+    }
+    .chat-header .back-button,
+    .chat-header .menu-button {
+      font-size: 20px;
+      cursor: pointer;
+    }
+    .chat-messages {
+      flex: 1;
+      overflow-y: auto;
+      padding: 10px;
+      background-color: #eaeaea;
+    }
+    .message {
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 15px;
+    }
+    .message img```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>微信聊天界面</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #dcdcdc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .chat-container {
+      display: flex;
+      flex-direction: column;
+      height: 90vh;
+      width: 375px; /* Fixed width like WeChat */
+      background-color: #f5f5f5;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    .chat-header {
+      background-color: #0078ff;
+      color: white;
+      padding: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 18px;
+    }
+    .chat-header .back-button,
+    .chat-header .menu-button {
+      font-size: 20px;
+      cursor: pointer;
     }
     .chat-messages {
       flex: 1;
@@ -53,6 +116,7 @@
       line-height: 1.5;
     }
     .message.user {
+      flex-direction: row-reverse;
       justify-content: flex-end;
     }
     .message.user .message-content {
@@ -107,7 +171,11 @@
 </head>
 <body>
   <div class="chat-container">
-    <div class="chat-header">IT支持</div>
+    <div class="chat-header">
+      <span class="back-button">←</span>
+      <span>IT支持</span>
+      <span class="menu-button">⋮</span>
+    </div>
     <div class="chat-messages" id="chatMessages">
       <!-- Messages will be dynamically added here -->
     </div>
