--- a/index.html
+++ b/index.html
@@ -50,59 +50,6 @@
       align-items: flex-start;
       margin-bottom: 15px;
     }
-    .message img```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>微信聊天界面</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #dcdcdc;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .chat-container {
-      display: flex;
-      flex-direction: column;
-      height: 90vh;
-      width: 375px; /* Fixed width like WeChat */
-      background-color: #f5f5f5;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      overflow: hidden;
-    }
-    .chat-header {
-      background-color: #0078ff;
-      color: white;
-      padding: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      font-size: 18px;
-    }
-    .chat-header .back-button,
-    .chat-header .menu-button {
-      font-size: 20px;
-      cursor: pointer;
-    }
-    .chat-messages {
-      flex: 1;
-      overflow-y: auto;
-      padding: 10px;
-      background-color: #eaeaea;
-    }
-    .message {
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 15px;
-    }
     .message img.avatar {
       width: 40px;
       height: 40px;
@@ -207,7 +154,6 @@
       const avatar = document.createElement('img');
       avatar.classList.add('avatar');
       avatar.src = message.type === 'user' ? 'user-avatar.png' : 'it-avatar.png';
-      messageElement.appendChild(avatar);
 
       const content = document.createElement('div');
       content.classList.add('message-content');
@@ -219,7 +165,14 @@
         image.src = message.image;
         content.appendChild(image);
       }
-      messageElement.appendChild(content);
+
+      if (message.type === 'user') {
+        messageElement.appendChild(content);
+        messageElement.appendChild(avatar);
+      } else {
+        messageElement.appendChild(avatar);
+        messageElement.appendChild(content);
+      }
 
       chatMessages.appendChild(messageElement);
       chatMessages.scrollTop = chatMessages.scrollHeight;
