--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
       background-color: #d9fdd3;
       color: black;
       align-self: flex-end;
+      text-align: right; /* Align text to the right */
     }
     .message.user img.avatar {
-      margin-right: 10px; /* Adjusted to position avatar on the right */
+      margin-left: 10px; /* Adjusted to position avatar on the right */
     }
     .message.it {
       justify-content: flex-start;
