--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       color: black;
       align-self: flex-end;
       text-align: right; /* Align text to the right */
+      margin-left: auto; /* Push content to the right edge */
     }
     .message.user img.avatar {
       margin-left: 10px; /* Adjusted to position avatar on the right */
