--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
       { type: 'user', text: '哎呀,我有一个it单子有几天了.' },
       { type: 'user', text: '现在也不知道什么进度了.' },
       { type: 'it', text: '我们一起看一下吧,可以进入myservice页面.' },
-      { type: 'it', image: 'myservice-screenshot.png' },
+      { type: 'it', image: '1-Shortcut.png' },
       { type: 'it', text: '如果是手机浏览器,会需要先输入密码和验证码.' },
-      { type: 'it', image: 'password-screenshot.png' },
+      { type: 'it', image: '2-authentication.jpg' },
       { type: 'it', text: '然后进入My Requests' },
       { type: 'it', image: 'my-requests-screenshot.png' },
       { type: 'user', text: '好,我找到单子了.' }
