--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
   <script>
     const messages = [
-      { type: 'user', text: '哎呀,我有一个it单子有几天了。' },
+      { type: 'user', text: '哎呀,我有一个IT单子有几天了。' },
       { type: 'user', text: '现在也不知道什么进度了。' },
-      { type: 'it', text: '我们一起看一下吧,可以进入myservice页面。' },
+      { type: 'it', text: '我们一起看一下吧,可以进入MyServices页面。' },
       { type: 'it', image: '1-Shortcut.png' },
       { type: 'it', text: '如果是手机浏览器,会需要先输入密码和验证码。' },
       { type: 'it', image: '2-authentication.jpg' },
