--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       { type: 'it', image: '2-authentication.jpg' },
       { type: 'it', text: '然后进入My Requests' },
       { type: 'it', image: '3-MyRequest.jpg' },
-      { type: 'user', text: '好,我找到单子了。' },
+      { type: 'user', text: '好，我找到单子了。' },
       { type: 'user', image: '4-foundTicket.jpg' },
       { type: 'it', text: '点进去，中间可以留言。\n下面是单子的处理记录。' },
       { type: 'it', image: '5-TicketP1.jpg' },   
