--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <script>
     const messages = [
-      { type: 'user', text: '哎呀,我有一个IT单子有几天了。\n现在也不知道什么进度了。' },
+      { type: 'user', text: '哎呀，我有一个IT单子有几天了。\n现在也不知道什么进度了。' },
       { type: 'it', text: '我们一起看一下吧。\n先进入MyServices页面。' },
       { type: 'it', image: '1-Shortcut.png' },
       { type: 'it', text: '如果是手机浏览器，会需要先输入密码和验证码。' },
